[gd_scene load_steps=15 format=3 uid="uid://vnpt47q1ibhy"]

[ext_resource type="PackedScene" uid="uid://ddwrs28uwd8ma" path="res://scenes/rusted_metro_scene/metro_scene.tscn" id="1_mdbn0"]
[ext_resource type="Script" path="res://render_scene.gd" id="1_w7o40"]
[ext_resource type="Resource" uid="uid://b0tje4hy6a1qs" path="res://scenes/rusted_metro_scene/themes/neutral.tres" id="2_6ap1l"]
[ext_resource type="Script" path="res://scenes/rusted_metro_scene/themes/rusted_metro_theme.gd" id="2_8jnyg"]
[ext_resource type="Shader" path="res://shaders/psx_dithering.gdshader" id="2_wj06k"]
[ext_resource type="Resource" uid="uid://cauewsowgl0ov" path="res://scenes/rusted_metro_scene/themes/iron_lung_typashit.tres" id="3_vgp51"]
[ext_resource type="Resource" uid="uid://cx86ypcvpaht1" path="res://scenes/rusted_metro_scene/themes/perrine.tres" id="5_onsty"]
[ext_resource type="Resource" uid="uid://p8iep5xu7f2q" path="res://scenes/rusted_metro_scene/themes/burnt.tres" id="6_1c2iw"]
[ext_resource type="Shader" path="res://shaders/shader_idk.gdshader" id="8_h4lgt"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cku2m"]
shader = ExtResource("2_wj06k")
shader_parameter/enabled = false
shader_parameter/dithering = true
shader_parameter/colors = 13
shader_parameter/dither_size = 2

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_fj2i1"]

[sub_resource type="Sky" id="Sky_iqyh1"]
sky_material = SubResource("ProceduralSkyMaterial_fj2i1")

[sub_resource type="Environment" id="Environment_wvemk"]
background_mode = 2
sky = SubResource("Sky_iqyh1")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jn2f5"]
shader = ExtResource("8_h4lgt")
shader_parameter/enabled = false
shader_parameter/threshold_r = 0.083
shader_parameter/threshold_g = 0.005
shader_parameter/threshold_b = 0.05

[node name="RenderScene" type="Control" node_paths=PackedStringArray("sub_viewport_container", "sub_viewport", "post_processing_control_node")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_w7o40")
sub_viewport_container = NodePath("SubViewportContainer")
sub_viewport = NodePath("SubViewportContainer/SubViewport")
post_processing_control_node = NodePath("PostProcessing")
metro_scene_themes = Array[ExtResource("2_8jnyg")]([ExtResource("2_6ap1l"), ExtResource("3_vgp51"), ExtResource("5_onsty"), ExtResource("6_1c2iw")])

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
material = SubResource("ShaderMaterial_cku2m")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(2, 2)
render_target_update_mode = 4

[node name="MetroScene" parent="SubViewportContainer/SubViewport" instance=ExtResource("1_mdbn0")]

[node name="WorldEnvironment" parent="SubViewportContainer/SubViewport/MetroScene" index="0"]
environment = SubResource("Environment_wvemk")

[node name="RustedMetro" parent="SubViewportContainer/SubViewport/MetroScene" index="1"]
lights_color = Color(1, 1, 1, 1)
lights_energy = 1.0

[node name="PostProcessing" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ThresholdShader" type="ColorRect" parent="PostProcessing"]
material = SubResource("ShaderMaterial_jn2f5")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[editable path="SubViewportContainer/SubViewport/MetroScene"]
